# NEAR_Contract_Analyze

./: .gitignore
Advanced_Example/multiple-cross-contract-calls/: package-lock.json
Advanced_Example/update-migrate-rust/: package-lock.json
Basic_Example/cross-contract-hello-rust/: package-lock.json
Basic_Example/donation-rust/: package-lock.json
Basic_Example/guest-book-rust/: package-lock.json
Basic_Example/hello-near/: package-lock.json
Basic_Example/rust-counter/: package-lock.json
Basic_Example/test/: package-lock.json  package.json
NEPs/nep_141/: Cargo.toml
NEPs/nep_145/: Cargo.toml
NEPs/nep_148/: Cargo.toml
NEPs/nep_171/: Cargo.toml
NEPs/nep_177/: Cargo.toml
NEPs/nep_178/: Cargo.toml
NEPs/nep_181/: Cargo.toml
NEPs/nep_199/: Cargo.toml
NEPs/nep_297/: Cargo.toml
Practice/LODIS/: package-lock.json  package.json
Practice/Token/: package-lock.json  package.json
Test/: Cargo.toml  package-lock.json  package.json
Test/src/: lib.rs
ft/: package-lock.json  package.json
ft/contract/: Cargo.toml
ft/contract/neardev/: dev-account  dev-account.env
ft/contract/src/: core_impl.rs  ft.rs  lib.rs  storage_impl.rs
nft/: package-lock.json  package.json
nft/contract/: Cargo.toml
nft/contract/neardev/: dev-account  dev-account.env
nft/contract/neardev_hello/: dev-account  dev-account.env
nft/contract/neardev_nft/: dev-account  dev-account.env
nft/contract/src/: approval_impl.rs  core_impl.rs  enumeration_impl.rs  lib.rs  macros.rs  royalty_impl.rs
nft/contract/src/hello/: Cargo.toml
nft/contract/src/hello/src/: lib.rs
(+131 files in other folders)
